[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tlhub"
dynamic = ["version"]
description = "Local TORCH_TRACE run hub with artifact browsing and diffing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bobren" }]
keywords = ["pytorch", "torch", "torch.compile", "torch_trace", "fx", "inductor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bobrenjc93/tlhub"
Repository = "https://github.com/bobrenjc93/tlhub"
Issues = "https://github.com/bobrenjc93/tlhub/issues"

[project.scripts]
tlhub = "tlhub.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tlhub.__version__" }
